modificacion footer y contacto

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -23,11 +23,30 @@
 </header>
 
 
-</section>
-    
+<section class="contacto">
 
+    <h1>CONTACTO</h1>
+<p>
+3547-302598
+</p>
 
-</section>
+<p>
+11-54890465
+</p>
+
+<p>
+kudairo@gmail.com
+</p>
+
+<p>
+Belgrano 425 local 4
+</p>
+
+<div>
+    <a href="https://goo.gl/maps/LmqLoWC6tVJhhgqi7"></a>
+</div>
+
+<section>
    
 
     <footer class="pieDePagina">
