agregado de contenido

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -46,6 +46,12 @@ Belgrano 425 local 4
     <a href="https://goo.gl/maps/LmqLoWC6tVJhhgqi7"></a>
 </div>
 
+<h2>REDES SOCIALES</h2>
+
+<div><input type="button" value="Twitter" class="btn--twitter"></div>
+<div><input type="button" value="Facebook" class="btn--facebook"></div>
+<div><input type="button" value="Instagram" class="btn--instagram"></div>
+
 <section>
    
 
