--- a/index.html
+++ b/index.html
@@ -11,17 +11,38 @@
     
 </head>
 </body>
-    <header>
-    <nav class="secciones">
-    </ul>
-        <li><a href="./index.html">Inicio</a></li>
-        <li><a href="./secciones/outfits.html">Outfits y accesorios</a></li>
-        <li><a href="./secciones/medios.de.pago.html">Formas de pago</a></li>
-        <li><a href="./secciones/quienes.html">¿Quienes somos?</a></li>
-        <li><a href="./secciones/contacto.html">Contacto</a></li>
-    </ul>
-</nav>
 
+</header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-black">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="./index.html">
+      <img src="./imagenes/logo.jpg" alt="" width="150" height="80">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="./index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./secciones/outfits.html">Outfits y accesiorios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./secciones/medios.de.pago.html">Formas de pago</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./secciones/quienes.html">¿Quienes somos?</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./secciones/contacto.html">Contacto</a>
+        </li>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 </header>
 
 <section class="container-fluid">
@@ -29,7 +50,8 @@
     <h1 class="display-3 text-center mt3"> Bienvenidos a sagittarius tienda online! </h1>
  
 
- <div>
+ <div class="container">
+   <div class="row row-cols-lg-12 row-cols-md-8 row-cols-sm-12">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -38,13 +60,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./imagenes/carousel-1.jpeg" class="d-block w-60" alt="...">
+            <img src="./imagenes/carousel-1.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./imagenes/carousel-2.jpeg" class="d-block w-60" alt="...">
+            <img src="./imagenes/carousel-2.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./imagenes/carousel-3.jpeg" class="d-block w-60" alt="...">
+            <img src="./imagenes/carousel-3.jpeg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -56,22 +78,45 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    </div>
  </div>
+<section>
+ <section id="galeria" class="container">
+<div class="text-center pt-5">
+  <h1>PROMOCIONES</h1>
+</div>
+<div class="row">
 
+<div class="col-lg-3">
+<img src="./imagenes/francesca-moch.jpeg" alt="MOCHILAS">
+</div>
 
+<div class="col-lg-3">
+<img src="./imagenes/belgica-moch.jpeg" alt="MOCHILAS">
+</div>
 
+<div class="col-lg-3">
+<img src="./imagenes/delfina-moch.jpeg" alt="MOCHILAS">
+</div>
 
+<div class="col-lg-3">
+<img src="./imagenes/ivana-moch.jpeg" alt="MOCHILAS">
+</div>
+
+ 
+
+  
 </section>
 
 
    <footer class="pieDePagina">
 <div class="redes">
   <p>
-  (3547)-302598
+    (3547)-302598
   </p>
   
   <p>
-  (11)-54890465
+    (11)-54890465
   </p>
  
   <p>
