--- a/secciones/outfits.html
+++ b/secciones/outfits.html
@@ -9,17 +9,37 @@
     <title>Document</title>
 </head>
 <body>
-
-    <header>
-        <nav class="secciones">
-            <ul class="secciones">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./outfits.html">Outfits y accesorios</a></li>
-                <li><a href="medios.de.pago.html">Formas de pago</a></li>
-                <li><a href="./quienes.html">¿Quienes somos?</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+</header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-black">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="../index.html">
+      <img src="../imagenes/logo.jpg" alt="" width="150" height="80">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../secciones/outfits.html">Outfits y accesiorios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../secciones/medios.de.pago.html">Formas de pago</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../secciones/quienes.html">¿Quienes somos?</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+        </li>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 </header>
     
 
@@ -36,28 +56,45 @@
     </div>
 <div class="row">
 
-    <div class="col-lg-4">
-<img src="../imagenes/francesca.jpeg" alt="MOCHILAS">
+    <div class="col-lg-3">
+<img src="../imagenes/francesca-moch.jpeg" alt="MOCHILAS">
     </div>
 
-    <div class="col-lg-4">
-<img src="../imagenes/belgica.jpeg" alt="MOCHILAS">
+    <div class="col-lg-3">
+<img src="../imagenes/belgica-moch.jpeg" alt="MOCHILAS">
     </div>
 
-    <div class="col-lg-4">
-<img src="../imagenes/delfina.jpeg" alt="MOCHILAS">
+    <div class="col-lg-3">
+<img src="../imagenes/delfina-moch.jpeg" alt="MOCHILAS">
     </div>
 
-    <div class="col-lg-4">
-<img src="../imagenes/ivana.jpeg" alt="MOCHILAS">
+    <div class="col-lg-3">
+<img src="../imagenes/ivana-moch.jpeg" alt="MOCHILAS">
     </div>
-    <div class="col-lg-4">
-<img src="../imagenes/emilia.jpeg" alt="MOCHILAS">
-    </div>
-<div class="col-lg-4">
-<img src="../imagenes/kima.jpeg" alt="MOCHILAS">
+
+
+<div class="text-center pt-5">
+    <h1>CARTERAS</h1>
+</div>
+<div class="row">
+
+<div class="col-lg-3">
+<img src="../imagenes/emilia-car.jpeg" alt="CARTERAS">
 </div>
 
+<div class="col-lg-3">
+<img src="../imagenes/italia-car.jpeg" alt="CARTERAS">
+</div>
+
+<div class="col-lg-3">
+<img src="../imagenes/italia-negra-car.jpeg" alt="CARTERAS">
+</div>
+
+<div class="col-lg-3">
+<img src="../imagenes/kali-car.jpeg" alt="CARTERAS">
+</div>
+<div class="col-lg-3">
+<img src="../imagenes/kima-car.jpeg" alt="CARTERAS">
 </div>
 
 
