--- a/secciones/quienes.html
+++ b/secciones/quienes.html
@@ -9,16 +9,37 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav class="secciones">
-            <ul class="secciones">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./outfits.html">Outfits y accesorios</a></li>
-                <li><a href="medios.de.pago.html">Formas de pago</a></li>
-                <li><a href="./quienes.html">¿Quienes somos?</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+</header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-black">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="../index.html">
+      <img src="../imagenes/logo.jpg" alt="" width="150" height="80">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../secciones/outfits.html">Outfits y accesiorios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../secciones/medios.de.pago.html">Formas de pago</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../secciones/quienes.html">¿Quienes somos?</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+        </li>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 </header>
 
 <section class="container-fluid">
@@ -28,7 +49,9 @@
 <div class="row">
 
     <div class="col-lg-8 col-md-6 col-sm-12">
-<p class="solamente">Saggitariuss no solamente  un local de ventas queremos que cada mujer encuentre su estilo se sienta más libre a la hora de escoger alguna prenda para verse hermosa como toda mujer debe sentirse, no dudes en venir!! verás la diferencia</p>
+<p class="solamente">Sagittarius no es solo un local de indumentaria y accesorios, es un espacio en el cual nuestras clientas se sientan inspiradas a la hora de elegir nuestros outfits. Tenemos una gran variedad de prendas de diseños unicos, pensados para vos.</p>
+<p class="solamente">Trabajamos con las siguientes marcas... Adoratta, Dimple jeans, Las Oreiro, Pierre Cardin, </p>
+<p class="solamente">Proximamente Sagittarius uomo para ellos</p>
     </div>
 
     <div class="col-lg-4 col-md-6 col-sm-12">
