--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -4,41 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 <body>
-
-    <header>
-        <nav class="secciones">
-            <ul class="secciones">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./outfits.html">Outfits y accesorios</a></li>
-                <li><a href="medios.de.pago.html">Formas de pago</a></li>
-                <li><a href="./quienes.html">¿Quienes somos?</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+</header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-black">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="../index.html">
+      <img src="../imagenes/logo.jpg" alt="" width="150" height="80">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../secciones/outfits.html">Outfits y accesiorios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../secciones/medios.de.pago.html">Formas de pago</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../secciones/quienes.html">¿Quienes somos?</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+        </li>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 </header>
 
 
-<section class="contacto">
+<section>
 
-    <h1>CONTACTO</h1>
-<p>
+    <h1 class="text-center pt-5">CONTACTO</h1>
+<p class="contacto">
 3547-302598
 </p>
 
-<p>
+<p class="contacto">
 11-54890465
 </p>
 
-<p>
+<p class="contacto">
 kudairo@gmail.com
 </p>
 
-<p>
+<p class="contacto">
 Belgrano 425 local 4
 </p>
 
@@ -46,12 +67,13 @@ Belgrano 425 local 4
     <a href="https://goo.gl/maps/LmqLoWC6tVJhhgqi7"></a>
 </div>
 
-<h2>REDES SOCIALES</h2>
+<div class="contacto">
+<h2  class="text-center pt-5">REDES SOCIALES</h2>
 
 <div><input type="button" value="Twitter" class="btn--twitter"></div>
 <div><input type="button" value="Facebook" class="btn--facebook"></div>
 <div><input type="button" value="Instagram" class="btn--instagram"></div>
-
+</div>
 <section>
    
 
