--- a/secciones/medios.de.pago.html
+++ b/secciones/medios.de.pago.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <title>Sagittarius_StoreTienda</title>
 </head>
 <body>
 </header>
@@ -42,47 +43,58 @@
 </nav>
 </header>
 
-    <section> 
-        <article>
+<section> 
 
 
-    <div class="redes">
-        <a href="https://instagram.com/sagittarius21_store?utm_medium=copy_link"> Seguirme en instagram </a>
-        </div>
-        </footer>
-    <from>
-        <label for="nombre_apellido">Nombre y Apellido:</label>
-        <input type="text" name="nombre_apellido">
-        <p>Hombre</p>
-        <input type="radio" name="sexo" value="hombre">
-        <p>Mujer</p>
-        <input type="radio" name="sexo" value="Mujer">
-    <form >
-        
-    </form>
-        <input type="submit" value="Enviar Formulario">
-        <input type="reset" value="Limpiar formulario">
-    </form>
-</article>
+<p class="contacto">
+  <i class="bi bi-arrow-right"></i>Financiaciones cuyo
+</p>
+<p class="contacto">
+  <i class="bi bi-arrow-right"></i>Mercado pago
+</p>
+<p class="contacto">
+  <i class="bi bi-arrow-right"></i>Efectivo
+</p>
+<p class="contacto">
+  <i class="bi bi-arrow-right"></i>Tranferencias
+</p>
+<p class="contacto">
+  <i class="bi bi-arrow-right"></i>Recibimos todas las tarjetas de credito y debito
+</p>
+<p class="contacto">
+  <i class="bi bi-arrow-right"></i>Credito con un interes del 6%, 10% y 16% dependiendo tu tarjeta
+</p>
+
+
+
+
+
+
+
 </section>
    
 
-    <footer class="pieDePagina">
-        <div class="redes">
-            <p>
-                (3547)-302598
-                </p>
-                
-                <p>
-                (11)-54890465
-                </p>
-                <p>
-                Belgrano 425 local 4
-                </p>
-                <p>
-                  Alta Gracia, Cba.
-                </p>
-          </div>
+<footer class="pieDePagina">
+  <div  class=" mt-4 container-fluid ">
+    <footer class="py-1 my-1">        
+      <ul class="nav justify-content-center mt-2">
+        <div class="spinner-grow text-info mx-2 cmyk"></div>
+        <div class="spinner-grow text-danger mx-2 cmyk"></div>
+        <div class="spinner-grow text-warning mx-2 cmyk">  </div>
+        <div class="spinner-grow text-dark mx-2 cmyk">  </div>        
+      </ul>
+
+      <ul class="nav justify-content-center">
+        <li class="nav-item"><a href="https://api.whatsapp.com/send?phone=541154890465&app=facebook&entry_point=page_cta" class=" mia-link nav-link px-2 text-light"> <i class="bi bi-telephone-fill"></i> (11)-54890465 </a></li>
+        <li class="nav-item"><a href="https://api.whatsapp.com/send?phone=541154890465&app=facebook&entry_point=page_cta" class="mia-link nav-link px-2 text-light"> <i class="bi bi-whatsapp"></i> (3547)-302598 </a></li>
+        <li class="nav-item"><a href="https://goo.gl/maps/xy37QkFjzFm4KYWa7" target="_blank" class="mia-link nav-link px-2 text-light"><i class="bi bi-geo-alt-fill"></i> Belgrano 425 local 4, Alta Gracia, Cba.</a></li>
+        <li class="nav-item"><a href="https://www.instagram.com/sagittarius21_store/" class="mia-link nav-link px-2 text-light"><i class="bi bi-instagram"></i> Sagittarius21_store</a></li>
+      </ul>
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="./contacto.html" class="mia-link nav-link px-2 text-light"> <i class="bi bi-watch"></i> Lunes a Sabado: 09:30 a 13:00  -  17:30 a 21:30</a></li>
+      </ul>
+
+      <a href="https://www.instagram.com/pinto_marcelo9/?hl=es" target="_blank" class=" nav-link px-2 text-light"><p class="copy-link text-center text-muted">- Copyright &copy; 2022 - Marcelo A. PINTO - <i class="bi bi-instagram"></i> - Todos los derechos reservados -</p></a>
     </footer>
 
 
