--- a/secciones/outfits.html
+++ b/secciones/outfits.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <title>Sagittarius_StoreTienda</title>
 </head>
 <body>
 </header>
@@ -56,19 +57,19 @@
     </div>
 <div class="row">
 
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-6 col-sm-6">
 <img src="../imagenes/francesca-moch.jpeg" alt="MOCHILAS">
     </div>
 
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-6 col-sm-6">
 <img src="../imagenes/belgica-moch.jpeg" alt="MOCHILAS">
     </div>
 
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-6 col-sm-6">
 <img src="../imagenes/delfina-moch.jpeg" alt="MOCHILAS">
     </div>
 
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-6 col-sm-6">
 <img src="../imagenes/ivana-moch.jpeg" alt="MOCHILAS">
     </div>
 
@@ -78,22 +79,22 @@
 </div>
 <div class="row">
 
-<div class="col-lg-3">
+<div class="col-lg-3 col-md-6 col-sm-6">
 <img src="../imagenes/emilia-car.jpeg" alt="CARTERAS">
 </div>
 
-<div class="col-lg-3">
+<div class="col-lg-3 col-md-6 col-sm-6">
 <img src="../imagenes/italia-car.jpeg" alt="CARTERAS">
 </div>
 
-<div class="col-lg-3">
+<div class="col-lg-3 col-md-6 col-sm-6">
 <img src="../imagenes/italia-negra-car.jpeg" alt="CARTERAS">
 </div>
 
-<div class="col-lg-3">
+<div class="col-lg-3 col-md-6 col-sm-6">
 <img src="../imagenes/kali-car.jpeg" alt="CARTERAS">
 </div>
-<div class="col-lg-3">
+<div class="col-lg-3 col-md-6 col-sm-6">
 <img src="../imagenes/kima-car.jpeg" alt="CARTERAS">
 </div>
 
@@ -107,24 +108,28 @@
 </section>
    
 
-    <footer class="pieDePagina">
-        <div class="redes">
-            <p>
-                (3547)-302598
-                </p>
-                
-                <p>
-                (11)-54890465
-                </p>
+<footer class="pieDePagina">
+  <div  class=" mt-4 container-fluid ">
+    <footer class="py-1 my-1">        
+      <ul class="nav justify-content-center mt-2">
+        <div class="spinner-grow text-info mx-2 cmyk"></div>
+        <div class="spinner-grow text-danger mx-2 cmyk"></div>
+        <div class="spinner-grow text-warning mx-2 cmyk">  </div>
+        <div class="spinner-grow text-dark mx-2 cmyk">  </div>        
+      </ul>
 
-                <p>
-                Belgrano 425 local 4
-                </p>
-                <p>
-                  Alta Gracia, Cba.
-                </p>
-          </div>
-        </footer>
+      <ul class="nav justify-content-center">
+        <li class="nav-item"><a href="https://api.whatsapp.com/send?phone=541154890465&app=facebook&entry_point=page_cta" class=" mia-link nav-link px-2 text-light"> <i class="bi bi-telephone-fill"></i> (11)-54890465 </a></li>
+        <li class="nav-item"><a href="https://api.whatsapp.com/send?phone=541154890465&app=facebook&entry_point=page_cta" class="mia-link nav-link px-2 text-light"> <i class="bi bi-whatsapp"></i> (3547)-302598 </a></li>
+        <li class="nav-item"><a href="https://goo.gl/maps/xy37QkFjzFm4KYWa7" target="_blank" class="mia-link nav-link px-2 text-light"><i class="bi bi-geo-alt-fill"></i> Belgrano 425 local 4, Alta Gracia, Cba.</a></li>
+        <li class="nav-item"><a href="https://www.instagram.com/sagittarius21_store/" class="mia-link nav-link px-2 text-light"><i class="bi bi-instagram"></i> Sagittarius21_store</a></li>
+      </ul>
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="./contacto.html" class="mia-link nav-link px-2 text-light"> <i class="bi bi-watch"></i> Lunes a Sabado: 09:30 a 13:00  -  17:30 a 21:30</a></li>
+      </ul>
+
+      <a href="https://www.instagram.com/pinto_marcelo9/?hl=es" target="_blank" class=" nav-link px-2 text-light"><p class="copy-link text-center text-muted">- Copyright &copy; 2022 - Marcelo A. PINTO - <i class="bi bi-instagram"></i> - Todos los derechos reservados -</p></a>
+    </footer>
 
 
 
