--- a/secciones/outfits.html
+++ b/secciones/outfits.html
@@ -58,21 +58,28 @@
 <div class="row">
 
     <div class="col-lg-3 col-md-6 col-sm-6">
-<img src="../imagenes/francesca-moch.jpeg" alt="MOCHILAS">
+<img src="../imagenes/francesca-moch.jpeg" alt="MOCHILAS"> <p class="precios">$8.900</p>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-6">
-<img src="../imagenes/belgica-moch.jpeg" alt="MOCHILAS">
+<img src="../imagenes/belgica-moch.jpeg" alt="MOCHILAS"> <p class="precios">$5.900</p>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-6">
-<img src="../imagenes/delfina-moch.jpeg" alt="MOCHILAS">
+<img src="../imagenes/delfina-moch.jpeg" alt="MOCHILAS"> <p class="precios">$8.600</p>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-6">
-<img src="../imagenes/ivana-moch.jpeg" alt="MOCHILAS">
+<img src="../imagenes/ivana-moch.jpeg" alt="MOCHILAS"> <p class="precios">$9.600</p>
     </div>
 
+    <div class="col-lg-3 col-md-6 col-sm-6">
+      <img src="../imagenes/ivana-2-moch.jpeg" alt="MOCHILAS"> <p class="precios">$9.500</p>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6">
+      <img src="../imagenes/romula-moch.jpeg" alt="MOCHILAS"> <p class="precios">$13.200</p>
+    </div>
 
 <div class="text-center pt-5">
     <h1>CARTERAS</h1>
@@ -80,22 +87,40 @@
 <div class="row">
 
 <div class="col-lg-3 col-md-6 col-sm-6">
-<img src="../imagenes/emilia-car.jpeg" alt="CARTERAS">
+<img src="../imagenes/emilia-car.jpeg" alt="CARTERAS"> <p class="precios">$5.500</p>
 </div>
 
 <div class="col-lg-3 col-md-6 col-sm-6">
-<img src="../imagenes/italia-car.jpeg" alt="CARTERAS">
+<img src="../imagenes/italia-car.jpeg" alt="CARTERAS"><p class="precios">$5.900</p>
 </div>
 
 <div class="col-lg-3 col-md-6 col-sm-6">
-<img src="../imagenes/italia-negra-car.jpeg" alt="CARTERAS">
+<img src="../imagenes/italia-negra-car.jpeg" alt="CARTERAS"><p class="precios">$5.900</p>
 </div>
 
 <div class="col-lg-3 col-md-6 col-sm-6">
-<img src="../imagenes/kali-car.jpeg" alt="CARTERAS">
+<img src="../imagenes/kali-car.jpeg" alt="CARTERAS"><p class="precios">$7.200</p>
 </div>
+
 <div class="col-lg-3 col-md-6 col-sm-6">
-<img src="../imagenes/kima-car.jpeg" alt="CARTERAS">
+<img src="../imagenes/kima-car.jpeg" alt="CARTERAS"><p class="precios">$5.400</p>
+</div>
+
+<div class="text-center pt-5">
+  <h1>BILLETERAS Y SOBRES</h1>
+</div>
+<div class="row">
+
+<div class="col-lg-3 col-md-6 col-sm-6">
+<img src="../imagenes/lady-bill.jpeg" alt="CARTERAS"> <p class="precios">$4.400</p>
+</div>
+
+<div class="col-lg-3 col-md-6 col-sm-6">
+<img src="../imagenes/mery-bill.jpeg" alt="CARTERAS"><p class="precios">$4.100</p>
+</div>
+
+<div class="col-lg-3 col-md-6 col-sm-6">
+<img src="../imagenes/alexa-sobre.jpeg" alt="CARTERAS"><p class="precios">$4.800</p>
 </div>
 
 
