--- a/index.html
+++ b/index.html
@@ -87,24 +87,21 @@
 </div>
 <div class="row">
 
-<div class="col-lg-3 col-md-6 col-sm-6">
-<img src="./imagenes/francesca-moch.jpeg" alt="MOCHILAS">
-</div>
+  <div class="col-lg-3 col-md-6 col-sm-6">
+    <img src="./imagenes/francesca-moch.jpeg" alt="MOCHILAS"> <p class="precios">$8.900</p>
+  </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6">
-<img src="./imagenes/belgica-moch.jpeg" alt="MOCHILAS">
-</div>
+  <div class="col-lg-3 col-md-6 col-sm-6">
+    <img src="./imagenes/emilia-car.jpeg" alt="CARTERAS"> <p class="precios">$5.500</p>
+  </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6">
-<img src="./imagenes/delfina-moch.jpeg" alt="MOCHILAS">
-</div>
+  <div class="col-lg-3 col-md-6 col-sm-6">
+    <img src="./imagenes/kima-car.jpeg" alt="CARTERAS"><p class="precios">$5.400</p>
+  </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6 col-6">
-<img src="./imagenes/ivana-moch.jpeg" alt="MOCHILAS">
-</div>
-
- 
-
+  <div class="col-lg-3 col-md-6 col-sm-6">
+    <img src="./imagenes/mery-bill.jpeg" alt="CARTERAS"><p class="precios">$4.100</p>
+  </div>
   
 </section>
 
