--- a/secciones/outfits.html
+++ b/secciones/outfits.html
@@ -57,27 +57,27 @@
     </div>
 <div class="row">
 
-    <div class="col-lg-3 col-md-6 col-sm-6">
+    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
 <img src="../imagenes/francesca-moch.jpeg" alt="MOCHILAS"> <p class="precios">$8.900</p>
     </div>
 
-    <div class="col-lg-3 col-md-6 col-sm-6">
+    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
 <img src="../imagenes/belgica-moch.jpeg" alt="MOCHILAS"> <p class="precios">$5.900</p>
     </div>
 
-    <div class="col-lg-3 col-md-6 col-sm-6">
+    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
 <img src="../imagenes/delfina-moch.jpeg" alt="MOCHILAS"> <p class="precios">$8.600</p>
     </div>
 
-    <div class="col-lg-3 col-md-6 col-sm-6">
+    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
 <img src="../imagenes/ivana-moch.jpeg" alt="MOCHILAS"> <p class="precios">$9.600</p>
     </div>
 
-    <div class="col-lg-3 col-md-6 col-sm-6">
+    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
       <img src="../imagenes/ivana-2-moch.jpeg" alt="MOCHILAS"> <p class="precios">$9.500</p>
     </div>
 
-    <div class="col-lg-3 col-md-6 col-sm-6">
+    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
       <img src="../imagenes/romula-moch.jpeg" alt="MOCHILAS"> <p class="precios">$13.200</p>
     </div>
 
@@ -86,23 +86,23 @@
 </div>
 <div class="row">
 
-<div class="col-lg-3 col-md-6 col-sm-6">
+<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
 <img src="../imagenes/emilia-car.jpeg" alt="CARTERAS"> <p class="precios">$5.500</p>
 </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6">
+<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
 <img src="../imagenes/italia-car.jpeg" alt="CARTERAS"><p class="precios">$5.900</p>
 </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6">
+<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
 <img src="../imagenes/italia-negra-car.jpeg" alt="CARTERAS"><p class="precios">$5.900</p>
 </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6">
+<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
 <img src="../imagenes/kali-car.jpeg" alt="CARTERAS"><p class="precios">$7.200</p>
 </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6">
+<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
 <img src="../imagenes/kima-car.jpeg" alt="CARTERAS"><p class="precios">$5.400</p>
 </div>
 
@@ -111,15 +111,15 @@
 </div>
 <div class="row">
 
-<div class="col-lg-3 col-md-6 col-sm-6">
+<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
 <img src="../imagenes/lady-bill.jpeg" alt="CARTERAS"> <p class="precios">$4.400</p>
 </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6">
+<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
 <img src="../imagenes/mery-bill.jpeg" alt="CARTERAS"><p class="precios">$4.100</p>
 </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6">
+<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
 <img src="../imagenes/alexa-sobre.jpeg" alt="CARTERAS"><p class="precios">$4.800</p>
 </div>
 
