--- a/secciones/medios.de.pago.html
+++ b/secciones/medios.de.pago.html
@@ -59,10 +59,10 @@
   <i class="bi bi-arrow-right"></i>Tranferencias
 </p>
 <p class="contacto">
-  <i class="bi bi-arrow-right"></i>Recibimos todas las tarjetas de credito y debito
+  <i class="bi bi-arrow-right"></i>Recibimos todas las tarjetas de crédito y débito
 </p>
 <p class="contacto">
-  <i class="bi bi-arrow-right"></i>Credito con un interes del 6%, 10% y 16% dependiendo tu tarjeta
+  <i class="bi bi-arrow-right"></i>Credito con un interés del 6%, 10% y 16% dependiendo tu tarjeta
 </p>
 
 
