--- a/secciones/quienes.html
+++ b/secciones/quienes.html
@@ -46,14 +46,14 @@
 
 <section class="container-fluid">
 
-<h2 class="display-3 text-center mt-3">¿Quienes somos?</h2>
+<h2 class="display-3 text-center mt-3">¿Quiénes somos?</h2>
 
 <div class="row">
 
     <div class="col-lg-8 col-md-6 col-sm-12">
-<p class="solamente">Sagittarius no es solo un local de indumentaria y accesorios, es un espacio en el cual nuestras clientas se sientan inspiradas a la hora de elegir nuestros outfits. Tenemos una gran variedad de prendas de diseños unicos, pensados para vos.</p>
+<p class="solamente">Sagittarius no es solo un local de indumentaria y accesorios, es un espacio en el cual nuestras clientas se sientan inspiradas a la hora de elegir nuestros outfits. Tenemos una gran variedad de prendas de diseños únicos, pensados para vos.</p>
 <p class="solamente">Trabajamos con las siguientes marcas... Adoratta, Dimple jeans, Las Oreiro, Pierre Cardin, </p>
-<p class="solamente">Proximamente Sagittarius uomo para ellos</p>
+<p class="solamente">Próximamente Sagittarius uomo para ellos</p>
     </div>
 
     <div class="col-lg-4 col-md-6 col-sm-12">
