--- a/index.html
+++ b/index.html
@@ -83,25 +83,32 @@
 <section>
  <section id="galeria" class="container">
 <div class="text-center pt-5">
-  <h1>PROMOCIONES</h1>
+  <h1>NOVEDADES</h1>
 </div>
 <div class="row">
 
-  <div class="col-lg-3 col-md-6 col-sm-6 col-12 d-flex flex-column align-items-center">
-    <img src="./imagenes/francesca-moch.jpeg" alt="MOCHILAS"> <p class="precios">$8.900</p>
-  </div>
+  <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+    <img src="./imagenes/francesca-moch.jpeg" alt="MOCHILAS">
+    <p class="precios">Mochila Francesca Rosa</p>
+    <p class="precios">$8.900</p>
+    </div>
 
-  <div class="col-lg-3 col-md-6 col-sm-6 col-12 d-flex flex-column align-items-center">
-    <img src="./imagenes/emilia-car.jpeg" alt="CARTERAS"> <p class="precios">$5.500</p>
-  </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+      <img src="./imagenes/emilia-car.jpeg" alt="Cartera">
+      <p class="precios">Cartera Emilia Negra</p>
+      <p class="precios">5.500</p>
+      </div>
 
-  <div class="col-lg-3 col-md-6 col-sm-6 col-12 d-flex flex-column align-items-center">
-    <img src="./imagenes/kima-car.jpeg" alt="CARTERAS"><p class="precios">$5.400</p>
-  </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+        <img src="./imagenes/kima-car.jpeg" alt="Bandolera">
+        <p class="precios">Bandolera Kima G/B</p>
+        <p class="precios">$5.400</p>
 
-  <div class="col-lg-3 col-md-6 col-sm-6 col-12 d-flex flex-column align-items-center">
-    <img src="./imagenes/mery-bill.jpeg" alt="CARTERAS"><p class="precios">$4.100</p>
-  </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+          <img src="./imagenes/mery-bill.jpeg" alt="Billetera">
+          <p class="precios">Billetera Mediana Mery</p>
+          <p class="precios">$4.100</p>
+          </div>
   
 </section>
 
