--- a/secciones/outfits.html
+++ b/secciones/outfits.html
@@ -52,76 +52,150 @@
 
 <section id="galeria" class="container">
 
+  <div class="text-center pt-5">
+    <h1>INDUMENTARIA</h1>
+</div>
+
+<div class="row">
+
+  <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+    <img src="../imagenes/indumentaria-1.jpeg" alt="Sin marca">
+    <p class="precios">Chaleco color verde</p>
+    <p class="precios">$3.600</p>
+    </div>
+
+<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+<img src="../imagenes/indumentaria-2.jpeg" alt="Sin marca">
+<p class="precios">Chaleco color marron</p>
+<p class="precios">$3.600</p>
+</div>
+
+<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+  <img src="../imagenes/indumentaria-3.jpeg" alt="Campera">
+  <p class="precios">Campera Verde M.E</p>
+  <p class="precios">$4.400</p>
+  </div>
+
+
+<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+    <img src="../imagenes/indumentaria-5.jpeg" alt="Brishka">
+    <p class="precios">Brishka Negra Dorado</p>
+    <p class="precios">$11.500</p>
+    </div>
+
+<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+    <img src="../imagenes/indumentaria-6.jpeg" alt="Jean">
+    <p class="precios">Jean Dimple Azul</p>
+    <p class="precios">$5.100</p>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+      <img src="../imagenes/indumentaria-7.jpeg" alt="Cinto">
+      <p class="precios">Cinto Adoratta Marron</p>
+      <p class="precios">$5.600</p>
+      </div>
+
+
+
     <div class="text-center pt-5">
         <h1>MOCHILAS</h1>
     </div>
 <div class="row">
 
-    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-<img src="../imagenes/francesca-moch.jpeg" alt="MOCHILAS"> <p class="precios">$8.900</p>
+  <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+    <img src="../imagenes/francesca-moch.jpeg" alt="MOCHILAS">
+    <p class="precios">Mochila Francesca Rosa</p>
+    <p class="precios">$8.900</p>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-<img src="../imagenes/belgica-moch.jpeg" alt="MOCHILAS"> <p class="precios">$5.900</p>
-    </div>
+      <img src="../imagenes/belgica-moch.jpeg" alt="MOCHILAS">
+      <p class="precios">Mochila Belgica Negra</p>
+      <p class="precios">$5.900</p>
+      </div>
 
-    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-<img src="../imagenes/delfina-moch.jpeg" alt="MOCHILAS"> <p class="precios">$8.600</p>
-    </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+        <img src="../imagenes/delfina-moch.jpeg" alt="MOCHILAS">
+        <p class="precios">Mochila Delfina R/M</p>
+        <p class="precios">$8.600</p>
+        </div>
 
-    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-<img src="../imagenes/ivana-moch.jpeg" alt="MOCHILAS"> <p class="precios">$9.600</p>
-    </div>
 
-    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-      <img src="../imagenes/ivana-2-moch.jpeg" alt="MOCHILAS"> <p class="precios">$9.500</p>
-    </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+          <img src="../imagenes/ivana-moch.jpeg" alt="MOCHILAS">
+          <p class="precios">Mochila Ivana Rosa</p>
+          <p class="precios">$9.600</p>
+          </div>
 
-    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-      <img src="../imagenes/romula-moch.jpeg" alt="MOCHILAS"> <p class="precios">$13.200</p>
-    </div>
+          <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+            <img src="../imagenes/ivana-2-moch.jpeg" alt="MOCHILAS">
+            <p class="precios">Mochila Ivana Negra</p>
+            <p class="precios">$9.500</p>
+            </div>
+
+            <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+              <img src="../imagenes/romula-moch.jpeg" alt="MOCHILAS">
+              <p class="precios">Mochila Romula Negra</p>
+              <p class="precios">$13.200</p>
+              </div>
 
 <div class="text-center pt-5">
-    <h1>CARTERAS</h1>
+    <h1>CARTERAS Y BANDOLERAS</h1>
 </div>
 <div class="row">
 
-<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-<img src="../imagenes/emilia-car.jpeg" alt="CARTERAS"> <p class="precios">$5.500</p>
-</div>
+  <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+    <img src="../imagenes/emilia-car.jpeg" alt="Cartera">
+    <p class="precios">Cartera Emilia Negra</p>
+    <p class="precios">5.500</p>
+    </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-<img src="../imagenes/italia-car.jpeg" alt="CARTERAS"><p class="precios">$5.900</p>
-</div>
+    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+      <img src="../imagenes/italia-car.jpeg" alt="Bandolera">
+      <p class="precios">Bandolera Italia Naranja</p>
+      <p class="precios">$5.900</p>
+      </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-<img src="../imagenes/italia-negra-car.jpeg" alt="CARTERAS"><p class="precios">$5.900</p>
-</div>
+      <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+        <img src="../imagenes/italia-negra-car.jpeg" alt="Bandolera">
+        <p class="precios">Bandolera Italia Negra</p>
+        <p class="precios">$5.900</p>
+        </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-<img src="../imagenes/kali-car.jpeg" alt="CARTERAS"><p class="precios">$7.200</p>
-</div>
+        <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+          <img src="../imagenes/kali-car.jpeg" alt="Bandolera">
+          <p class="precios">Bandolera Kali Verde</p>
+          <p class="precios">$7.200</p>
+          </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-<img src="../imagenes/kima-car.jpeg" alt="CARTERAS"><p class="precios">$5.400</p>
-</div>
+          <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+            <img src="../imagenes/kima-car.jpeg" alt="Bandolera">
+            <p class="precios">Bandolera Kima G/B</p>
+            <p class="precios">$5.400</p>
+            </div>
 
 <div class="text-center pt-5">
   <h1>BILLETERAS Y SOBRES</h1>
 </div>
 <div class="row">
 
-<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-<img src="../imagenes/lady-bill.jpeg" alt="CARTERAS"> <p class="precios">$4.400</p>
-</div>
+  <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+    <img src="../imagenes/lady-bill.jpeg" alt="Billetera">
+    <p class="precios">Billetera Grande Lady</p>
+    <p class="precios">$4.400</p>
+    </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-<img src="../imagenes/mery-bill.jpeg" alt="CARTERAS"><p class="precios">$4.100</p>
-</div>
+    <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+      <img src="../imagenes/mery-bill.jpeg" alt="Billetera">
+      <p class="precios">Billetera Mediana Mery</p>
+      <p class="precios">$4.100</p>
+      </div>
 
-<div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
-<img src="../imagenes/alexa-sobre.jpeg" alt="CARTERAS"><p class="precios">$4.800</p>
-</div>
+      <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
+        <img src="../imagenes/alexa-sobre.jpeg" alt="Sobre">
+        <p class="precios">Sobre Alexa</p>
+        <p class="precios">$4.800</p>
+        </div>
 
 
 
