--- a/secciones/outfits.html
+++ b/secciones/outfits.html
@@ -147,7 +147,7 @@
   <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
     <img src="../imagenes/emilia-car.jpeg" alt="Cartera">
     <p class="precios">Cartera Emilia Negra</p>
-    <p class="precios">5.500</p>
+    <p class="precios">$5.500</p>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-6 d-flex flex-column align-items-center">
